--- a/gamev10/app/build.gradle
+++ b/gamev10/app/build.gradle
@@ -42,10 +42,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'com.google.firebase:firebase-database:19.5.1'
     implementation 'com.google.firebase:firebase-storage:19.2.0'
     implementation 'com.google.firebase:firebase-auth:20.0.0'
     implementation 'com.firebaseui:firebase-ui-database:2.1.0'
-}
+    implementation'com.firebaseui:firebase-ui-storage:2.0.1'}
