--- a/gamev10/app/src/main/AndroidManifest.xml
+++ b/gamev10/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Game"></activity>
+        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".Game" />
         <activity android:name=".WelcomePage" />
         <activity android:name=".Register" />
         <activity android:name=".MainActivity">
