--- a/gamev10/app/src/main/AndroidManifest.xml
+++ b/gamev10/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity android:name=".Game" />
         <activity android:name=".WelcomePage" />
         <activity android:name=".Register" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".LogInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
