--- a/gamev10/app/src/main/AndroidManifest.xml
+++ b/gamev10/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChangePasswordActivity"></activity>
+        <activity android:name=".ChangeUsernameActivity"></activity>
+        <activity android:name=".ChangePasswordActivity" />
         <activity android:name=".LoseActivity" />
         <activity android:name=".WinActivity" />
         <activity android:name=".ProfileActivity" />
